improve logging for invalid JNLP location